Fri Apr 25 22:26:21 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/DynamicC.cpp:
	* tao/DynamicC.h:
	* tao/DynamicC.i:
	* tao/OctetSeqC.cpp:
	* tao/OctetSeqC.h:
	* tao/OctetSeqC.i:
	* tao/PortableServer/Default_ORTC.cpp:
	* tao/PortableServer/Default_ORTC.h:
	* tao/PortableServer/Default_ORTC.i:
	* tao/PortableServer/ImR_ActivatorC.h:
	* tao/PortableServer/ImR_LocatorC.cpp:
	* tao/PortableServer/ImR_LocatorC.h:
	* tao/PortableServer/ImR_LocatorC.i:
	* tao/PortableServer/ImplRepoC.cpp:
	* tao/PortableServer/ImplRepoC.h:
	* tao/PortableServer/PortableServerC.cpp
	* tao/PortableServer/ImplRepoC.i: Regenerated ode and patched them. 

	* tao/PortableServer/diffs/Default_ORT.diff:
	* tao/PortableServer/diffs/ImplRepo.diff:
	* tao/diffs/Dynamic.diff:
	* tao/diffs/OctetSeq.diff: Updated the diff files. 

Fri Apr 25 17:04:34 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* TAO_IDL/be/be_type.cpp:
	* TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:
	* TAO_IDL/be_include/be_visitor_sequence/sequence_cs.h: Added code
	  to generate explicit template instantiations.

Fri Apr 25 15:21:58 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tao\RTCORBA\Thread_Pool.cpp: 

	  In create_threadpool_helper(), finalize thread pool resource in
	  case of thread creation errors.  This will fix a memory leak.

	* tests\RTCORBA\Banded_Connections\client.cpp: 
	* tests\RTCORBA\Banded_Connections\server.cpp: 

	  Report meaningful message in case of thread creation errors.

Fri Apr 25 08:59:12 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/IFR_Client/IFR_BaseC.cpp:
	* tao/IFR_Client/IFR_BaseC.h:
	* tao/IFR_Client/IFR_BaseC.i:
	* tao/IFR_Client/IFR_BasicC.cpp:
	* tao/IFR_Client/IFR_BasicC.h:
	* tao/IFR_Client/IFR_BasicC.i:
	* tao/IFR_Client/IFR_ComponentsC.cpp:
	* tao/IFR_Client/IFR_ComponentsC.h:
	* tao/IFR_Client/IFR_ComponentsC.i:
	* tao/IFR_Client/IFR_ExtendedC.cpp:
	* tao/IFR_Client/IFR_ExtendedC.h: